# Qommunist

./: .gitignore  Protocol.txt  Qommunist.cabal  README.md  make  stack.yaml
Execs/: Qommunist-Darwin
Python/: Player.py  game.py  game.py.orig  inputBox.py
app/: Main.hs
src/: Base.hs  EncodeGame.hs  Game.hs  Lib.hs  ParallelCommunication.hs  Playing.hs  Vec.hs
