name:                Qommunist
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Qommunist#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Lööv
maintainer:          jonathan.loov@gmail.com
copyright:           2017 Jonathan Lööv
category:            Servering
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Game, Vec, Base, Playing, EncodeGame
  build-depends:       base >= 4.7 && < 5, network, bytestring, stm
  default-language:    Haskell2010

executable Qommunist-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Qommunist
  default-language:    Haskell2010

test-suite Qommunist-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Qommunist
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Qommunist
